--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -31,6 +31,7 @@
     cursor: pointer;
     justify-content: center;
     color: $color-wite;
+    transition: .4s;
   }
   @include text;
 
@@ -41,5 +42,7 @@
   }
 
   &:hover,
-  &.is-active { opacity: .5; }
+  &.is-active { 
+    background: linear-gradient(to left, $color-gradient-two 0%, $color-gradient-one 100%);
+   }
 }
