--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -10,8 +10,9 @@ mixin slider(pagination, buttons)
       +e.button._next
 
 mixin slide()
-  .swiper-slide
+  a(href="#").swiper-slide
     +e.slide&attributes(attributes)
+      +e.IMG(src='./assets/images/heart-top.png').__heart
       block
 
 
