--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -34,3 +34,9 @@ mixin banner()
         +slider(false, true)
           +slide
             img(src='./assets/images/slide.jpg').slide-img
+          +slide
+            img(src='./assets/images/slide-two.jpg').slide-img
+          +slide
+            img(src='./assets/images/slide-three.jpg').slide-img
+          +slide
+            img(src='./assets/images/slide-one.jpg').slide-img
