--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -35,6 +35,10 @@
   &__link {
     color: $color-basic;
     font-weight: 700;
+    transition: .3s;
+    &:hover {
+      color: $color-basic-dark;
+    }
   }
 
   &__vertical-item {
