--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -1,6 +1,6 @@
 .content-left {
   flex: 2;
-  margin-right: 16px;
+  margin-right: 50px;
   display: block;
   color: $color-basic;
 
@@ -29,8 +29,8 @@
 
   &__text {
     margin-bottom: 67px;
-    letter-spacing: -0.36px;
-    line-height: 1.65;
+    letter-spacing: .4px;
+    line-height: 1.66;
 
     &_building {
       margin-bottom: 34px;
