--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,8 +12,10 @@
 @import '../pages/**/*';
 
 .container {
-  width: 1620px;
+  width: 100%;
+  max-width: 1640px;
   margin: 0 auto;
+  padding: 0 10px;
   box-sizing: border-box;
   &_flex {
     display: flex;
