--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -12,9 +12,13 @@ mixin slider(pagination, buttons)
 mixin slide()
   a(href="#").swiper-slide
     +e.slide&attributes(attributes)
-      +e.IMG(src='./assets/images/heart-top.png').__heart
       block
 
+mixin slide-two()
+  a(href="#").swiper-slide
+    +e.slide&attributes(attributes)
+      +e.IMG(src='./assets/images/heart-top.png').__heart
+      block
 
 mixin slider-two(pagination, buttons)
   +b.slider&attributes(attributes).swiper-container.js-slider-two
