--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -2,24 +2,26 @@
   $tab-gap: 25px;
  
 
-  display: block;
+  display: flex;
   font-size: 0;
   margin-top: -$tab-gap;
 
   &__tab {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     margin-top: $tab-gap;
     border: 1px solid $color-border-light;
     transition: border-color $ease-main, opacity $ease-main;
-    padding: 27px 30px;
+    padding: 27px 0px;
     cursor: pointer;
     font-size: 17px;
     font-weight: 700;
     letter-spacing: -0.34px;
+    width: 25%;
 
     &.active {
       border-bottom: 2px solid;
-      padding: 27px 30px 22px;
+      padding: 27px 0px 22px;
     }
   }
 
