--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -14,13 +14,13 @@ block content
         .slider-title You may also like spaces around 
           span.slider-title_span Kensington 
         +slider-two(false, true)
-          +slide
+          +slide-two
             img(src='./assets/images/sbo.jpg').slide-index
             .slider-cube
               .cube
             .slider-title__slide TOG - Henry Wood House
             .slider-plach W1W, London
-          +slide
+          +slide-two
             img(src='./assets/images/sbt.jpg').slide-index
             .slider-cube
               .cube.cube_yellow
@@ -28,7 +28,7 @@ block content
               .cube.cube_blue
             .slider-title__slide Blooming Founders (Former Blooms Lon...
             .slider-plach EC2A, London
-          +slide
+          +slide-two
             img(src='./assets/images/sbth.jpg').slide-index
             .slider-cube
               .cube.cube_yellow
@@ -36,7 +36,7 @@ block content
               .cube.cube_blue
             .slider-title__slide Blooming Founders (Former Blooms Lon...
             .slider-plach EC2A, London
-          +slide
+          +slide-two
             img(src='./assets/images/sbf.jpg').slide-index
             .slider-cube
               .cube.cube_yellow
