--- a/app/blocks/form-elements/form-elements.pug
+++ b/app/blocks/form-elements/form-elements.pug
@@ -7,6 +7,7 @@ mixin input()
 
 mixin input-number()
   .input-numberbox
+    span.input-numberbox__text amount:
     input.input.input-numberbox__input.js-numberbox-input&attributes(attributes)
     span.input-numberbox__button.js-numberbox-minus
     span.input-numberbox__button.js-numberbox-plus
