--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -98,17 +98,20 @@
 // #####
 
 .input-numberbox {
-  display: table;
+  display: flex;
+  align-items: center;
   width: 100%;
 
   &__button {
-    border: 1px solid $color-border;
     width: 40px;
-    display: table-cell;
+    height: 100%;
+    display: flex;
     font-size: 18px;
     font-family: monospace;
     cursor: pointer;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-left: 1px solid $color-border;
 
     &:hover::before, &:hover::after { opacity: .5; }
 
@@ -123,9 +126,25 @@
     flex: 1;
     border-left: 0;
     border-right: 0;
-    text-align: center;
-    display: table-cell;
+    text-align: left;
+    display: flex;
+    font-size: 14px;
+    color: $color-basic;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 20px;
+    
   }
+  &__text {
+    flex: 1;
+    text-align: right;
+    margin-right: 6px;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $text-light;
+  }
+  border: 1px solid $color-border !important;
 }
 
 // #####
