--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -1,12 +1,13 @@
 .scroll-form {
   width: 290px;
   display: block;
-  padding: 30px 40px;
+  padding: 28px 39px;
   background: $color-wite;
     &__title {
       font-weight: 700;
-      font-size: 25px;
-      margin-bottom: 20px;
+      font-size: 24px;
+      margin-bottom: 26px;
+      letter-spacing: -.8px;
 
     }
 
@@ -42,7 +43,7 @@
       text-align: center;
       font-size: 13px;
       letter-spacing: -0.26px;
-      margin: 17px 0 23px;
+      margin: 0 0 22px;
 
       &-min {
         color: $text-light;
@@ -52,13 +53,18 @@
       }
     }
 
-    .button {
-      margin-bottom: 22px;
+    .button { 
       display: flex;
+      margin-bottom: 36px;
+      &_gradient {
+        padding: 10px 0;
+        margin-bottom: 22px;
+      }
       span {
         width: 100%;
         display: flex;
         justify-content: center;
+        padding: 6px;
       }
     }
 
@@ -90,6 +96,9 @@
     font-size: 20px;
 
   }
+}
+.choices {
+  margin-bottom:  16px;
 }
 
 .choices__inner {
