--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -26,6 +26,20 @@
     transition: .3s;
   }
 
+  &__search {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 42px;
+    width: 42px;
+    background-color:rgba($color: $color-grey-dark, $alpha: .2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .3s;
+    &:hover { background-color:rgba($color: $color-grey-dark, $alpha: .8); }
+  }
+
   &__dots {
     position: absolute;
     bottom: 10px;
