--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -79,11 +79,14 @@
   .button {
     margin-left: 11px;
     padding: 3px 3px;
-    font-size: 14px;
+    font-size: 12px;
     letter-spacing: -0.3px;
     font-weight: 700;
+    &_gradient {
+      padding: 3px 7px;
+    }
     &__text {
-      padding: 0;
+      padding: 0 4px;
       display: flex;
       justify-content: center;
       align-items: center;
