--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -32,11 +32,11 @@ mixin banner()
         +e.__start-price £300 per month
       +e.__right
         +slider(false, true)
-          +slide
+          +slide('./assets/images/slide.jpg')
             img(src='./assets/images/slide.jpg').slide-img
-          +slide
+          +slide('./assets/images/slide-two.jpg')
             img(src='./assets/images/slide-two.jpg').slide-img
-          +slide
+          +slide('./assets/images/slide-three.jpg')
             img(src='./assets/images/slide-three.jpg').slide-img
-          +slide
+          +slide('./assets/images/slide-one.jpg')
             img(src='./assets/images/slide-one.jpg').slide-img
