--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -23,7 +23,7 @@ mixin slide-two()
       block
 
 mixin slider-two(pagination, buttons)
-  +b.slider&attributes(attributes).swiper-container.js-slider-two
+  +b.slider._two&attributes(attributes).swiper-container.js-slider-two
     .swiper-wrapper
       block
     if pagination
