--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -151,3 +151,30 @@
   font-weight: 400;
   transition: .3s;
 }
+
+
+.slider_two {
+  overflow:initial;
+  .slider__button {
+    width: 6%;
+    background: $color-bg;
+    height: 100%;
+    &_next {
+      right: -9%;
+      &::before {
+        border: 0 solid #000;
+        border-top-width: 2px;
+        border-right-width: 2px;
+      }
+    }
+    &_prev {
+      left: -9%;
+      &::before {
+        border: 0 solid #000;
+        border-bottom-width: 2px;
+        border-left-width: 2px;
+      }
+    }
+  }
+  
+}
