--- a/app/blocks/facil-list/facil-list.pug
+++ b/app/blocks/facil-list/facil-list.pug
@@ -2,25 +2,25 @@ mixin facil-list()
   +b.UL.facil-list&attributes(attributes)
     +e.LI.__item
       +e.__title Gym
-      +e.IMG(src='./assets/images/f1.png').__img
+      +icon('gym').__img._gym
     +e.LI.__item
       +e.__title Childcare
-      +e.IMG(src='./assets/images/f2.png').__img
+      +icon('childcare').__img
     +e.LI.__item
       +e.__title Kitchen
-      +e.IMG(src='./assets/images/f3.png').__img
+      +icon('kitchen').__img
     +e.LI.__item
       +e.__title Tea/Coffee
-      +e.IMG(src='./assets/images/f4.png').__img
+      +icon('tea_coffe').__img
     +e.LI.__item
       +e.__title Lockers
-      +e.IMG(src='./assets/images/f5.png').__img
+      +icon('lockers').__img
     +e.LI.__item
       +e.__title Event Space
-      +e.IMG(src='./assets/images/f6.png').__img
+      +icon('event_space').__img
     +e.LI.__item
       +e.__title Bike Storage
-      +e.IMG(src='./assets/images/f7.png').__img
+      +icon('bike_storage').__img
     +e.LI.__item
       +e.__title Showers
-      +e.IMG(src='./assets/images/f8.png').__img
+      +icon('showers').__img
