--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -13,7 +13,7 @@ mixin slide(href)
   .swiper-slide
     +e.slide&attributes(attributes)
       +e.A(href=href).__search.js-fancybox
-        +e.IMG(src='./assets/images/search.png').__search-img
+        +icon('search').__search-img
       block
 
 mixin slide-two()
