--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -38,6 +38,11 @@
     align-items: center;
     transition: .3s;
     &:hover { background-color:rgba($color: $color-grey-dark, $alpha: .8); }
+    &-img {
+      height: 21px;
+      width: 21px;
+      fill: $color-wite;
+    }
   }
 
   &__dots {
