--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -21,11 +21,11 @@ mixin banner()
         +e.UL.__down-list 
           +e.LI.__down-item
             +e.A(href="#").__link-item
-              +e.IMG(src='./assets/images/heart-top.png')
+              +icon('heart').__svg
               +e.__text Add to Favorites
           +e.LI.__down-item
             +e.A(href="#").__link-item
-              +e.IMG(src='./assets/images/arr-down.png')
+              +icon('arrow3').__svg
               +e.__text Download as PDF
 
         +e.__start Starting at Just
