--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -89,6 +89,10 @@
   &__link-item {
     display: flex;
     align-items: center;
+    transition: .2s;
+    &:hover {
+      opacity: .5;
+    }
   }
 
   &__text {
@@ -110,5 +114,10 @@
     font-weight: 700;
   }
 
+  &__svg {
+    height: 25px;
+    width: 25px;
+    fill: $color-wite;
+  }
 }
 
