--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -8,31 +8,31 @@ mixin content-left()
     +e.UL.__map-list
       +e.LI.__map-item
         +e.__map-text Chancery Lane
-        +e.IMG(src='./assets/images/stop.png').__last
+        +icon('metro').__metro._red.__last
         +e.__map-text._min 5 min
-        +e.IMG(src='./assets/images/men.png')
+        +icon('man').__metro._car
       +e.LI.__map-item
         +e.__map-text Great Portland Street
-        +e.IMG(src='./assets/images/stop-o.png')
-        +e.IMG(src='./assets/images/stop-t.png').__mr
-        +e.IMG(src='./assets/images/stop-th.png').__last
+        +icon('metro').__metro._purpure
+        +icon('metro').__metro._yellow.__mr
+        +icon('metro').__metro._pink.__last
         +e.__map-text._min 25 min
-        +e.IMG(src='./assets/images/men.png')
+        +icon('man').__metro._car
       +e.LI.__map-item
         +e.__map-text Haymarket / Jermyn Street
-        +e.IMG(src='./assets/images/bus.png')
+        +icon('bus').__metro._bus
         +e.__map-nomer 6
         +e.__map-nomer 20
         +e.__map-nomer N53
         +e.__map-nomer N15
         +e.__map-nomer.__last N113
         +e.__map-text_min 25 min
-        +e.IMG(src='./assets/images/men.png')
+        +icon('man').__metro._car
       +e.LI.__map-item
         +e.__map-text Heathrow airport
-        +e.IMG(src='./assets/images/fly.png').__last
+        +icon('plane').__metro._plane.__last
         +e.__map-text_min 44-80 min
-        +e.IMG(src='./assets/images/car.png')
+        +icon('car').__metro._car
     +e.__title Building rules
     +e.__text._building  One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
     +text-list
