--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -83,4 +83,30 @@
   &__mr {
     margin: 0 9px;
   }
+
+  &__metro {
+    width: 26px;
+    height: 22px;
+    &_red {
+      fill: #e24d25;
+    }
+    &_purpure {
+      fill: #9b0158;
+    }
+    &_yellow {
+      fill: #fed201;
+    }
+    &_pink {
+      fill: #f087a3;
+    }
+    &_bus {
+      fill: #c64444;
+    }
+    &_plane {
+      fill: #60a2d0;
+    }
+    &_car {
+      fill: $color-basic;
+    }
+  }
 }
