--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -6,8 +6,17 @@
 
   &__logo {
     margin-right: 60px;
-    &-img {
-      margin-top: -20px;
+    display: flex;
+    align-items: center;
+    margin-top: -70px;
+    &-cube {
+      height: 54px;
+      width: 47px;
+      margin-right: 10px;
+    }
+    &-text {
+      height: 21px;
+      width: 113px;
     }
   }
 
@@ -60,6 +69,15 @@
     margin-right: 18px;
     &:last-child {
       margin-right: 0;
+    }
+  }
+  &__social-svg {
+    width: 26px;
+    height: 30px;
+    fill: $color-basic;
+    transition: .3s;
+    &:hover {
+      fill: $color-basic-dark;
     }
   }
 
