--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -2,7 +2,8 @@ mixin header()
   +b.header&attributes(attributes)
     .container.container_flex
       +e.A(href="/").__logo
-        +e.IMG.__logo-img(src='assets/images/logo.png')
+        +icon('logo').__logo-cube
+        +icon('logo2').__logo-text
       +header-menu
       +burger
 
