--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -4,10 +4,28 @@
   align-items: center;
   &__logo {
     margin-right: auto;
+    display: flex;
+    align-items: center;
+    &-cube {
+      height: 54px;
+      width: 47px;
+      margin-right: 10px;
+      .st0{fill:#fff;}
+    }
+    &-text {
+      height: 21px;
+      width: 113px;
+    }
   }
   padding: 30px 0;
 }
 
 .header-js {
   background: $color-wite;
+  .header__logo {
+    &-text {
+      display: none;
+    }
+    
+  }
 }
