--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -19,7 +19,7 @@ mixin slide(href)
 mixin slide-two()
   a(href="#").swiper-slide
     +e.slide&attributes(attributes)
-      +e.IMG(src='./assets/images/heart-top.png').__heart
+      +icon('heart').__heart
       block
 
 mixin slider-two(pagination, buttons)
