--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -24,6 +24,10 @@
     top: 20px;
     opacity: 0;
     transition: .3s;
+    width: 27px;
+    height: 27px;
+    fill: #ffffff;
+    transition: .3s;
   }
 
   &__search {
