--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -33,6 +33,13 @@
 
   }
 
+  &__heart {
+    height: 20px;
+    width: 20px;
+    fill: $text-light;
+    margin-left: auto;
+  }
+
   &__hot-desc {
     color: $text-light;
     font-size: 15px;
