--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -52,7 +52,7 @@ mixin content-left()
               +accordion-button +
               +e.__hot-desc hot desc
               +e.__price £185 per month
-              +e.IMG(src='./assets/images/heart-top.png')
+              +icon('heart').__heart
               +button Arrange a viewing
               +button-gradient Request Reservation
 
