--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -33,21 +33,21 @@ mixin footer()
                   +e.A(href="#").__link Advertise
         +e.__col
           +e.UL.__list
-            +e.LI.__item
+            +e.LI.__item._left
               +select.footer-select
                 option(value="English")
                 option(value="English")
                 option(value="English")
                 option(value="English")
-            +e.LI.__item
+            +e.LI.__item._left
               +select.footer-select
                 option(value="GBR")
                 option(value="GBR")
                 option(value="GBR")
                 option(value="GBR")
-            +e.LI.__item
+            +e.LI.__item._left
               +e.A(href="mailto:info@spacepool.com").__link info@spacepool.com
-            +e.LI.__item
+            +e.LI.__item._left
               +e.UL.__vertical-list
                 +e.LI.__vertical-item
                   +e.__vertical-link © Space Pool ltd. 2019
