--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -35,10 +35,14 @@
   }
 
   &__item {
-    margin-right: 52px;
+    margin-right: 57px;
+    &_left {
+      margin-right: 30px;
+    }
     &:last-child {
       margin-right: 0;
     }
+
   }
 
   &__link {
@@ -51,8 +55,8 @@
   }
 
   &__vertical-item {
-    margin-bottom: 16px;
-    font-size: 16px;
+    margin-bottom: 11px;
+    font-size: 15px;
     letter-spacing: -0.32px;
     font-weight: 700;
     &:last-child {
@@ -63,6 +67,7 @@
   &__social-list {
     display: flex;
     justify-content: space-between;
+    margin-top: 25px;
   }
 
   &__social-item {
