--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -10,7 +10,8 @@ mixin header()
 mixin header-login()
   +b.header&attributes(attributes)
     .container.container_flex
-      +e.__logo
-        +e.IMG.__logo-img(src='assets/images/logo.png')
+      +e.A(href="/").__logo
+        +icon('logo').__logo-cube
+        +icon('logo2').__logo-text
       +header-user
       +burger
