--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -27,4 +27,5 @@ include ../components/content-left/content-left
 include ../components/content/content
 include ../components/footer/footer
 include ../components/header/header
+include ../components/info/info
 include ../components/ui-kit/ui-kit
