--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -9,3 +9,4 @@ block content
       +e.list
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
         +link(href="index.html") Главная (index.html)
+        +link(href="page1.html") page1 (page1.html)
