--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -49,7 +49,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 html, body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden; // Убираем горизонтальный скролл
+  // Убираем горизонтальный скролл
   width: 100%;
   min-height: 100%;
 }
@@ -59,6 +59,7 @@ body {
   font-size: 16px; // Убираем проблему с отступами между inline-элементами
   color: $color-basic;
   background: $color-bg;
+  overflow-x: hidden; 
 }
 
 img {
