--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -10,7 +10,7 @@ block content
     +breadcrumbs-box
     +content
     .slider-indexBox
-      .container
+      .container.container_slider
         .slider-title You may also like spaces around 
           span.slider-title_span Kensington 
         +slider-two(false, true)
