--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -8,136 +8,136 @@ block content
     +header
 
     +info
-
-    +slider-three(false, true)
-      +slide-two
-        img(src='./assets/images/sbo.jpg').slide-index
-        .slider-cube
-          .cube
-        .slider-title__slide TOG - Henry Wood House
-        .slider-plach W1W, London
-      +slide-two
-        img(src='./assets/images/sbt.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbth.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbf.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
+    .container.container_slider
+      +slider-three(false, true)
+        +slide-two
+          img(src='./assets/images/sbo.jpg').slide-index
+          .slider-cube
+            .cube
+          .slider-title__slide TOG - Henry Wood House
+          .slider-plach W1W, London
+        +slide-two
+          img(src='./assets/images/sbt.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbth.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbf.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
 
     .container
       +map()#map
 
-
-    +slider-two(false, true)
-      +slide-two
-        img(src='./assets/images/sbo.jpg').slide-index
-        .slider-cube
-          .cube
-        .slider-title__slide TOG - Henry Wood House
-        .slider-plach W1W, London
-      +slide-two
-        img(src='./assets/images/sbt.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbth.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbf.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
+    .container.container_slider
+      +slider-two(false, true)
+        +slide-two
+          img(src='./assets/images/sbo.jpg').slide-index
+          .slider-cube
+            .cube
+          .slider-title__slide TOG - Henry Wood House
+          .slider-plach W1W, London
+        +slide-two
+          img(src='./assets/images/sbt.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbth.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbf.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
 
     +info-two
 
-
-    +slider-three(false, true)
-      +slide-two
-        img(src='./assets/images/sbo.jpg').slide-index
-        .slider-cube
-          .cube
-        .slider-title__slide TOG - Henry Wood House
-        .slider-plach W1W, London
-      +slide-two
-        img(src='./assets/images/sbt.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbth.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbf.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-
-
+    .container.container_slider
+      +slider-three(false, true)
+        +slide-two
+          img(src='./assets/images/sbo.jpg').slide-index
+          .slider-cube
+            .cube
+          .slider-title__slide TOG - Henry Wood House
+          .slider-plach W1W, London
+        +slide-two
+          img(src='./assets/images/sbt.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbth.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbf.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
 
 
 
-    +slider-two(false, true)
-      +slide-two
-        img(src='./assets/images/sbo.jpg').slide-index
-        .slider-cube
-          .cube
-        .slider-title__slide TOG - Henry Wood House
-        .slider-plach W1W, London
-      +slide-two
-        img(src='./assets/images/sbt.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbth.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-          .cube.cube_red
-          .cube.cube_blue
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, London
-      +slide-two
-        img(src='./assets/images/sbf.jpg').slide-index
-        .slider-cube
-          .cube.cube_yellow
-        .slider-title__slide Blooming Founders (Former Blooms Lon...
-        .slider-plach EC2A, Lond
+
+    .container.container_slider
+      +slider-two(false, true)
+        +slide-two
+          img(src='./assets/images/sbo.jpg').slide-index
+          .slider-cube
+            .cube
+          .slider-title__slide TOG - Henry Wood House
+          .slider-plach W1W, London
+        +slide-two
+          img(src='./assets/images/sbt.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbth.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
+        +slide-two
+          img(src='./assets/images/sbf.jpg').slide-index
+          .slider-cube
+            .cube.cube_yellow
+          .slider-title__slide Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, Lond
     
     +footer
