--- a/app/blocks/text-list/text-list.scss
+++ b/app/blocks/text-list/text-list.scss
@@ -2,9 +2,7 @@
   display: block;
   margin-bottom: 73px;
 
-  &_acardeon {
-    margin-bottom: 10px;
-  }
+  
 
   &__circle {
     width: 6px;
@@ -22,4 +20,16 @@
     font-weight: 400;
     letter-spacing: -0.36px;
   }
+
+  &_acardeon {
+    margin-bottom: 10px;
+    margin-top: 30px;
+
+    .text-list__item {
+      font-size: 15px;
+      margin-bottom: 10px;
+    }
+
+  }
+
 }
