--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -7,7 +7,7 @@
 
   &__left {
     flex: 1;
-    padding: 60px 67px 55px 67px;
+    padding: 64px 67px 52px 67px;
     background: $color-grey-dark;
     display: flex;
     flex-direction: column;
@@ -67,16 +67,16 @@
   }
 
   &__title {
-    font-size: 39px;
-    letter-spacing: -1.5px;
+    font-size: 38px;
+    letter-spacing: -.8px;
     display: block;
     margin-bottom: auto;
-    line-height: 1.2;
+    line-height: 1.3;
   }
 
   &__down-list {
     display: flex;
-    margin-bottom: 60px;
+    margin-bottom: 61px;
     margin-top: 10px;
   }
 
